<resources>
    <string name="app_name">Lab7</string>
    <string name="heading">Find A Song</string>
    <string name="song_button">Find</string>
    <string name="toggle_on">Female Artist</string>
    <string name="toggle_off">Male Artist</string>
    <string-array name="genre">
        <item>EDM</item>
        <item>Country</item>
        <item>Hip-Hop</item>
    </string-array>
    <string name="radio1">Upbeat</string>
    <string name="radio2">Slow</string>


</resources>
